force-app/main/default/objects/TrackIT__Location__c/TrackIT__Location__c.object-meta.xml
<CustomObject>
    <description>Physical location of an item.</description>
    <label>Location</label>
    <nameField>
        <label>Location ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>