force-app/main/default/objects/TrackIT__Location__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show on Field Web App</label>
    <type>Checkbox</type>
</CustomField>