force-app/main/default/objects/TrackIT__Location__c/fields/Item_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Item_Equivalent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Equivalent</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>