force-app/main/default/objects/TrackIT__Location__c/fields/Klient_Project__c.field-meta.xml
<CustomField>
    <fullName>Klient_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>