force-app/main/default/objects/TrackIT__Location__c/fields/TrackIT__Add_Inspection_Event_to_Calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_Inspection_Event_to_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event for next inspection to calendar</description>
    <inlineHelpText>Check this box to add event to inspector&apos;s calendar for next inspection for this location.</inlineHelpText>
    <label>Add Inspection Event to Calendar</label>
    <type>Checkbox</type>
</CustomField>