force-app/main/default/objects/TrackIT__Location__c/fields/TrackIT__Assigned_Inspector__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assigned_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>