force-app/main/default/objects/TrackIT__Location__c/fields/TrackIT__Description__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Description__c</fullName>
    <description>Location description</description>
    <inlineHelpText>Enter a description for the location ID. Maximum 255 character multi-line field.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>