force-app/main/default/objects/TrackIT__Location__c/fields/TrackIT__Inspection_Cycle_in_Days__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Cycle_in_Days__c</fullName>
    <inlineHelpText>Enter the amount of days between each inspection cycle</inlineHelpText>
    <label>Inspection Cycle in Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>