force-app/main/default/objects/TrackIT__Location__c/fields/TrackIT__Inspection_Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Duration_Time__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Approximate duration time of inspection in minutes</description>
    <inlineHelpText>Enter the approximate duration time in minutes needed when inspecting this location. This field is needed if adding the next inspection date as an event on the inspector&apos;s calendar.</inlineHelpText>
    <label>Inspection Duration Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>