force-app/main/default/objects/TrackIT__Location__c/fields/TrackIT__Site__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Site__c</fullName>
    <description>Do not use this field. Changed picklist values create app package upgrade error.</description>
    <label>NOT USED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Site</valueSetName>
    </valueSet>
</CustomField>