force-app/main/default/objects/TrackIT__Location__c/fields/Video_Links__c.field-meta.xml
<CustomField>
    <fullName>Video_Links__c</fullName>
    <label>Video Links</label>
    <length>1200</length>
    <type>Html</type>
</CustomField>