force-app/main/default/objects/TrackIT__Location__c/validationRules/TrackIT__Assigned_Inspector_Is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Assigned_Inspector_Is_Blank</fullName>
    <active>true</active>
    <description>Displays error message if Assigned Inspector is blank and Add Inspection Event To Calendar is checked.</description>
    <errorConditionFormula>AND( TrackIT__Add_Inspection_Event_to_Calendar__c = TRUE,ISBLANK(  TrackIT__Assigned_Inspector__c  ) )</errorConditionFormula>
    <errorDisplayField>TrackIT__Assigned_Inspector__c</errorDisplayField>
    <errorMessage>Enter the assigned inspector. Required if adding inspection event to calendar.</errorMessage>
</ValidationRule>