force-app/main/default/objects/TrackIT__Location__c/validationRules/TrackIT__Inspection_Duration_Time_Is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Inspection_Duration_Time_Is_Blank</fullName>
    <active>true</active>
    <description>Displays error message if Inspection Duration Time is blank and Add Inspection Event To Calendar is checked.</description>
    <errorConditionFormula>AND( TrackIT__Add_Inspection_Event_to_Calendar__c = TRUE,ISBLANK( TrackIT__Inspection_Duration_Time__c ) )</errorConditionFormula>
    <errorDisplayField>TrackIT__Inspection_Duration_Time__c</errorDisplayField>
    <errorMessage>Enter the approximate duration time in minutes needed for inspection. Enter 0 (numeric) if not needed.</errorMessage>
</ValidationRule>