force-app/main/default/objects/TrackIT__Location__c/validationRules/TrackIT__Loc_Inspect_Reminder_Time_Is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Loc_Inspect_Reminder_Time_Is_Blank</fullName>
    <active>true</active>
    <description>Displays error message if Inspection Reminder Time is blank and
Add Inspection Reminder to Calendar is checked.</description>
    <errorConditionFormula>AND(TrackIT__Add_Inspection_Reminder_to_Calendar__c   = TRUE,ISPICKVAL(TrackIT__Inspection_Reminder_Time__c , &apos;&apos;) )</errorConditionFormula>
    <errorDisplayField>TrackIT__Inspection_Reminder_Time__c</errorDisplayField>
    <errorMessage>Enter the Inspection Reminder Time. Required if adding inspection reminder time to calendar.</errorMessage>
</ValidationRule>