force-app/main/default/objects/TrackIT__Location__c/validationRules/TrackIT__LocationID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__LocationID_Change_After_Creation_Rule</fullName>
    <active>false</active>
    <description>Prevents users from changing a location ID after the location is initially entered.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE(  Name  )),FALSE,ISCHANGED(   Name   ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Location ID cannot be changed after initial creation. Please contact your System Administrator to change the location ID after the initial location is created.</errorMessage>
</ValidationRule>