force-app/main/default/objects/TrackIT__Location__c/listViews/Active_on_the_Inventory_Field_App.listView-meta.xml
<ListView>
    <fullName>Active_on_the_Inventory_Field_App</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Description__c</columns>
    <columns>Item_Equivalent__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Store_Location__c</columns>
    <columns>Klient_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active on the Inventory Field App</label>
</ListView>