force-app/main/default/objects/TrackIT__Location__c/listViews/Boxes.listView-meta.xml
<ListView>
    <fullName>Boxes</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Description__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Video_Links__c</columns>
    <columns>Store_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_Type__c</field>
        <operation>equals</operation>
        <value>Box</value>
    </filters>
    <label>Boxes</label>
</ListView>