force-app/main/default/objects/TrackIT__Location__c/listViews/HQ_Locations.listView-meta.xml
<ListView>
    <fullName>HQ_Locations</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Description__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Video_Links__c</columns>
    <columns>Store_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_Type__c</field>
        <operation>equals</operation>
        <value>HQ Location</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>HQ Locations</label>
</ListView>