force-app/main/default/objects/TrackIT__Location__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Description__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Video_Links__c</columns>
    <columns>Store_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>