force-app/main/default/objects/TrackIT__Location__c/listViews/Vehicles.listView-meta.xml
<ListView>
    <fullName>Vehicles</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Description__c</columns>
    <columns>Item_Equivalent__c</columns>
    <columns>License_Plate__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Year__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_Type__c</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Vehicles</label>
</ListView>